<resources>
    <string name="app_name">GoGirl</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_splash_screen">GoGirl</string>
    <string name="action_add_favourite">Add to Favourites</string>
    <string name="backdrop_title">GoGirl</string>
    <string name="hint_name">Full Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="btn_login">Login</string>
    <string name="btn_sign_up">Sign Up</string>
    <string name="err_msg_name">Enter your full name</string>
    <string name="err_msg_email">Enter valid email address</string>
    <string name="err_msg_password">Enter the password</string>
    <string name="slide_1_title">Hello Food!</string>
    <string name="slide_1_desc">The easiest way to order food from your favourite restaurant!</string>
    <string name="slide_2_title">Movie Tickets</string>
    <string name="slide_2_desc">Book movie tickets for your family and friends!</string>
    <string name="slide_3_title">Great Discounts</string>
    <string name="slide_3_desc">Best discounts on every single service we offer!</string>
    <string name="slide_4_title">World Travel</string>
    <string name="slide_4_desc">Book tickets of any transportation and travel the world!</string>
    <string name="next">NEXT</string>
    <string name="start">GOT IT</string>
    <string name="skip">SKIP</string>
    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>
    <string-array name="nav_drawer_items">
        <item>Dashboard</item>
        <item>Safe/Unsafe points</item>
        <item>Contact Friends</item>
        <item>Auto Record</item>
        <item>Fake Siren</item>
        <item>Contact Helpline</item>
        <item>Safety Tips</item>
        <item>Move Of the Day</item>
        <item>Learn About the App</item>


    </string-array>
    <string name="desc_list_item_icon">Item Icon</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="url">defacto_url</string>
    <string name="Dashboard">Dashboard</string>
    <string name="Safe">Safe/Unsafe Points</string>
    <string name="Contact">Contact Friends</string>
    <string name="Record">Auto Record</string>
    <string name="Siren">Fake Siren</string>
    <string name="Helplines">Contact Helplines</string>
    <string name="Tips">Safety Tips</string>
    <string name="Move">Move Of the Day</string>
    <string name="Learn">Learn About the App</string>
    <string name="no_internet">Please make sure you\'re connected to Internet</string>
<string name="unavailable_function">This functionality is currently unavailable.</string>
<string name="dialog_call">Voice Call</string>
<string name="dialog_message">Send Message</string>
<string name="title_activity_steps">Steps</string>
<string name="title_activity_faq">Frequently Asked Questions</string>
<string name="title_activity_confidentiality">Confidentiality</string>
<string name="title_activity_resources">Resources</string>
<string name="title_activity_contact_post_staff">ContactPostStaff</string>
<string name="title_activity_contact_other_staff">Contact Other Staff</string>
<string name="title_activity_other_staff_content">Other Staff Content</string>
<string name="title_activity_circle_of_trust">Circle Of Trust</string>
<string name="title_activity_trustees">Trustees</string>
<string name="title_activity_circle_intro">CircleIntro</string>
<string name="title_activity_saftey_resources">SafetyResources</string>
<string name="reporting_process">Reporting Process</string>
<string name="reporting_process_sub">Learn all about reporting</string>
<string name="reporting_types">Reporting Types</string>
<string name="reporting_services">Reporting Services</string>
<string name="reporting_steps">Reporting Steps</string>
<string name="reporting_contact">Contact Staff to Report</string>
<string name="reporting_resources">More Reporting Resources</string>
<string name="reporting_confidentiality">Confidentiality</string>
<string name="reporting_faq">Learn More about the Reporting Types</string>
<string name="reporting_faq_title">FAQ</string>
<string name="title_activity_types">Types</string>
<string name="reporting_get_help">Get Help Now</string>
<string name="reporting_get_help_sub1">Post Staff</string>
<string name="reporting_get_help_sub2">Other Staff and Support Options</string>
<string name="get_help">Get Help now</string>
<string name="circle">Circle of Trust</string>
<string name="reporting">Reporting Process</string>
<string name="safety">Safety Resources</string>
<string name="helping_others">Helping Others</string>
<string name="contact_pcsaves">PC SAVES Anonymous Helpline</string>
<string name="contact_ova">Office of Victim Advocacy</string>
<string name="contact_oig">Office of Inspector General</string>
<string name="contact_ocrd">Office of Civil Rights and Diversity</string>
<string name="contact_pcmo_via">Contact PCMO via</string>
<string name="contact_ssm_via">Contact SSM via</string>
<string name="contact_sarl_via">Contact SARL via</string>
<string name="contact">Contact</string>
<string name="via">Via</string>
<string name="contact_pcmo">Contact PCMO</string>
<string name="contact_ssm">Contact SSM</string>
<string name="contact_sarl">Contact SARL</string>
<string name="reporting_change_location">Change Location</string>
<string name="reporting_current_location">This is information for</string>
<string name="reporting_current_post">(current post)</string>
<string-array name="locations_array">
    <item>Uganda</item>
    <item>Syria</item>
    <item>Tunisia</item>
</string-array>
<string name="circle_title">Circle of Trust</string>
<string name="home_title">A Safety Resource for Peace Corps Volunteers</string>
<string name="helping">Helping</string>
<string name="friends_and_community">Friends and community members</string>
<string name="learn_effect">learn about the effect of Sexual Assault</string>
<string name="bystander">Bystander intervention tactics</string>
<string name="predator_tactic">Predator tactics</string>
<string name="predator_tactic_title">Tactics of Sexual Predators</string>
<string name="comrade1">Name 1</string>
<string name="comrade2">Name 2</string>
<string name="comrade3">Name 3</string>
<string name="comrade4">Name 4</string>
<string name="comrade5">Name 5</string>
<string name="comrade6">Name 6</string>
<string name="slide_one_head">Just a few Steps on how to use</string>
<string name="slide_one_button">Circle Of Trust</string>
<string name="slide_three_head">Circle Of Trust</string>
<string name="slide_three_bottom">Select the message you want to send from here!</string>
<string name="slide_four_head">The message will be sent to 6 contacts for immediate intervention</string>
<string name="slide_four_bottom">Done</string>
<string name="add_comrades_text">Add the Emergency Contacts here</string>
<string name="duplicate_number_errormessage">Duplicate Number!Please enter again</string>
<string name="select_request">Select a request</string>
<string name="come_get_me">Come get me</string>
<string name="need_interruption">Call I need an interruption</string>
<string name="need_to_talk">I need to talk</string>
<string name="cancel">Cancel</string>
<string name="come_get_me_message">Come and get me. I need help getting home Safely. Call ASAP to get my Location.Sent through GoGirl!</string>
<string name="come_get_me_message_with_location">Come and get me. I need help getting home Safely. My last location #LOC# ( #LOC_URL# ).Sent through GoGirl!.</string>
<string name="interruption_message">Call and pretend you need me. I need an interruption. Message sent through Gogirl!</string>
<string name="need_to_talk_message">I need to talk. Message sent through Gogirl!</string>
<string name="msg_sent">Message sent</string>
 <string name="SignUpURL">http://virtusa.azurewebsites.net/signup.php</string>
<string name="ok">OK</string>
<string name="message_failed">Message Sending Failed for contact </string>
<string name="no_phone_number">No phone number found</string>
<string name="choose_number">Choose a number</string>
<string name="circle_of_trust_slide_two">When you are feeling insecure or need your emergency contacts\' attention.\nPress the button</string>
<string name="confirmation_message1">This message is being sent to</string>
<string name="confirmation_message2">registered contacts.</string>
<string name="confirmation_message3">registered contact.</string>
<string name="no_comrade_title">No Contacts Registered</string>
<string name="no_comrade_msg">Failed to send message since no contacts have been registered</string>
<string name="add_comrades_save">Save</string>
<string name="message_options">Message Template</string>
<string name="updated_phone_numbers">"Your Emergency Contacts' phone numbers have been updated"</string>
<string name="not_updated_phone_numbers">No changes detected</string>
<string name="updated_phone_numbers_fail">"Unable to update your contacts' phone numbers"</string>
<string name="dialog_tag">Alert_Dialog</string>
<string name="network_unavailable">Please check your network connection and try again</string>
<string name="first_aide">First Aide</string>
<string name="sms_send_fail">Failed</string>
<string name="sms_send_pass">Sent</string>
<string name="log_title">SMS Log Report</string>
<string name="receive_log">You\'ll receive the delivery report shortly</string>
<string name="safety_tools">Safety Tools</string>
<string name="support_services">Support Services</string>
<string name="sexual_assault_awareness">Sexual Assault Awareness</string>
<string name="policies_glossary">Policies and Glossary</string>
<string name="radar">RADAR</string>
<string name="unwanted_attention">Dealing with Unwanted Attention</string>
<string name="unwanted_attention_title">Unwanted Attention</string>
<string name="commonalities">Commonalities of Sexual Predators</string>
<string name="bystander_intervention">Bystander Intervention</string>
<string name="safety_plan_basics">Safety Plan Basics</string>
<string name="safety_plan">Safety Plan Worksheet</string>
<string name="safety_plan_title">Safety Plan</string>
<string name="benefits">Benefits of Seeking Staff Support</string>
<string name="available_services">Services after a Sexual Assault</string>
<string name="commitment">PCs commitment to Sexual Assault</string>
<string name="after_assault">What to do After an Assault?</string>
<string name="mythbusters">Peace Corps Mythbusters</string>
<string name="was_assault">Was it Sexual Assault?</string>
<string name="common_questions">Sexual Assault Common Questions</string>
<string name="impact">Impact of Sexual Assault</string>
<string name="harassment">Sexual Harassment</string>
<string name="summary_sheet">Peace Corps Policies</string>
<string name="glossary">Glossary</string>
<string name="further_resources">Further Resources</string>
<string name="settings">Settings</string>
<string name="user_login">User logged in : </string>
<string name="title_activity_lol_bar">LolBarActivity</string>
<string name="navigation_drawer_open">Open navigation drawer</string>
<string name="navigation_drawer_close">Close navigation drawer</string>
<string name="reporting_current_post_html_text">If you are in a country not listed, contact your country of service or the US Embassy ( http://travel.state.gov/content/passports/english/emergencies.html )</string>
<string name="circle_subtitle">My Trustees</string>
<string name="no_name">No Name</string>
<string name="unregistered">Register</string>
<string name="safety_tools_subtitle">Know all about your Safety Tools</string>
<string name="contact_post_staff">Contact Post Staff</string>
<string name="contact_other_staff">Contact Other Staff</string>
<string name="step_1">&lt;b>STEP 1&lt;/b></string>
</resources>