<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/activity_trustee_background">
    <RelativeLayout
        android:layout_width="match_parent"
        android:gravity="center_horizontal"
        android:id="@+id/main_rel"
        android:layout_height="wrap_content">



        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:gravity="center_horizontal">


            <TextView
                android:id="@+id/comradeTitle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="@dimen/text_normal"
                android:textColor="@color/activity_trustee_text_color"
                android:text="@string/add_comrades_text"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="10dp" />

            <EditText
                android:id="@+id/comrade1EditText"
                android:layout_below="@id/comradeTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/trustee_margin"
                android:layout_marginLeft="@dimen/trustee_margin"
                android:layout_marginTop="@dimen/trustee_margin"
                android:textCursorDrawable="@null"
                android:background="@drawable/edit_text_bg"
                android:layout_gravity="center"
                android:textColor="@color/activity_trustee_edittext_color"
                android:cursorVisible="false"
                android:inputType="number"
                android:hint="@string/comrade1"
                android:ems="@integer/ems"
                android:paddingTop="@dimen/padding_top"/>

            <ImageButton
                android:layout_alignTop="@id/comrade1EditText"
                android:layout_alignRight="@id/comrade1EditText"
                android:layout_alignBottom="@+id/comrade1EditText"
                android:paddingTop="@dimen/contact_pick_padding_top_bottom"
                android:paddingBottom="@dimen/contact_pick_padding_top_bottom"
                android:layout_marginRight="@dimen/contact_pick_button_margin"
                android:layout_width="@dimen/contact_pick_button_width"
                android:layout_height="wrap_content"
                android:scaleType="fitCenter"
                android:src="@drawable/contact_icon"
                android:id="@+id/comrade1Button"
                android:background="@null"
                android:layout_gravity="right"
                android:onClick="addContact"
                android:tag="1"/>

            <EditText
                android:id="@+id/comrade2EditText"
                android:layout_below="@id/comrade1EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/trustee_margin"
                android:layout_marginLeft="@dimen/trustee_margin"
                android:layout_marginTop="@dimen/trustee_margin"
                android:inputType="number"
                android:textCursorDrawable="@null"
                android:background="@drawable/edit_text_bg"
                android:layout_gravity="center"
                android:textColor="@color/activity_trustee_edittext_color"
                android:hint="@string/comrade2"
                android:ems="@integer/ems"
                android:paddingTop="@dimen/padding_top"/>

            <ImageButton
                android:layout_alignTop="@id/comrade2EditText"
                android:layout_alignRight="@id/comrade2EditText"
                android:layout_alignBottom="@+id/comrade2EditText"
                android:paddingTop="@dimen/contact_pick_padding_top_bottom"
                android:paddingBottom="@dimen/contact_pick_padding_top_bottom"
                android:layout_marginRight="@dimen/contact_pick_button_margin"
                android:layout_width="@dimen/contact_pick_button_width"
                android:layout_height="wrap_content"
                android:scaleType="fitCenter"
                android:src="@drawable/contact_icon"
                android:id="@+id/comrade2Button"
                android:background="@null"
                android:layout_gravity="right"
                android:onClick="addContact"
                android:tag="2"/>

            <EditText
                android:id="@+id/comrade3EditText"
                android:layout_below="@id/comrade2EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/trustee_margin"
                android:layout_marginLeft="@dimen/trustee_margin"
                android:layout_marginTop="@dimen/trustee_margin"
                android:inputType="number"
                android:textCursorDrawable="@null"
                android:background="@drawable/edit_text_bg"
                android:layout_gravity="center"
                android:textColor="@color/activity_trustee_edittext_color"
                android:hint="@string/comrade3"
                android:ems="@integer/ems"
                android:paddingTop="@dimen/padding_top"/>

            <ImageButton
                android:layout_alignTop="@id/comrade3EditText"
                android:layout_alignRight="@id/comrade3EditText"
                android:layout_alignBottom="@+id/comrade3EditText"
                android:layout_marginRight="@dimen/contact_pick_button_margin"
                android:paddingTop="@dimen/contact_pick_padding_top_bottom"
                android:paddingBottom="@dimen/contact_pick_padding_top_bottom"
                android:layout_width="@dimen/contact_pick_button_width"
                android:layout_height="wrap_content"
                android:scaleType="fitCenter"
                android:src="@drawable/contact_icon"
                android:id="@+id/comrade3Button"
                android:background="@null"
                android:layout_gravity="right"
                android:onClick="addContact"
                android:tag="3"/>

            <EditText
                android:id="@+id/comrade4EditText"
                android:layout_below="@id/comrade3EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/trustee_margin"
                android:layout_marginLeft="@dimen/trustee_margin"
                android:layout_marginTop="@dimen/trustee_margin"
                android:inputType="number"
                android:textCursorDrawable="@null"
                android:background="@drawable/edit_text_bg"
                android:layout_gravity="center"
                android:textColor="@color/activity_trustee_edittext_color"
                android:hint="@string/comrade4"
                android:ems="@integer/ems"
                android:paddingTop="@dimen/padding_top"/>

            <ImageButton
                android:layout_alignTop="@id/comrade4EditText"
                android:layout_alignRight="@id/comrade4EditText"
                android:layout_alignBottom="@+id/comrade4EditText"
                android:layout_marginRight="@dimen/contact_pick_button_margin"
                android:paddingTop="@dimen/contact_pick_padding_top_bottom"
                android:paddingBottom="@dimen/contact_pick_padding_top_bottom"
                android:layout_width="@dimen/contact_pick_button_width"
                android:layout_height="wrap_content"
                android:scaleType="fitCenter"
                android:src="@drawable/contact_icon"
                android:id="@+id/comrade4Button"
                android:background="@null"
                android:layout_gravity="right"
                android:onClick="addContact"
                android:tag="4"/>

            <EditText
                android:id="@+id/comrade5EditText"
                android:layout_below="@id/comrade4EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/trustee_margin"
                android:layout_marginLeft="@dimen/trustee_margin"
                android:layout_marginTop="@dimen/trustee_margin"
                android:inputType="number"
                android:textCursorDrawable="@null"
                android:background="@drawable/edit_text_bg"
                android:layout_gravity="center"
                android:textColor="@color/activity_trustee_edittext_color"
                android:hint="@string/comrade5"
                android:ems="@integer/ems"
                android:paddingTop="@dimen/padding_top"/>

            <ImageButton
                android:layout_alignTop="@id/comrade5EditText"
                android:layout_alignRight="@id/comrade5EditText"
                android:layout_alignBottom="@+id/comrade5EditText"
                android:layout_marginRight="@dimen/contact_pick_button_margin"
                android:paddingTop="@dimen/contact_pick_padding_top_bottom"
                android:paddingBottom="@dimen/contact_pick_padding_top_bottom"
                android:layout_width="@dimen/contact_pick_button_width"
                android:layout_height="wrap_content"
                android:scaleType="fitCenter"
                android:src="@drawable/contact_icon"
                android:id="@+id/comrade5Button"
                android:background="@null"
                android:layout_gravity="right"
                android:onClick="addContact"
                android:tag="5"/>

            <EditText
                android:id="@+id/comrade6EditText"
                android:layout_below="@id/comrade5EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/trustee_margin"
                android:layout_marginLeft="@dimen/trustee_margin"
                android:layout_marginTop="@dimen/trustee_margin"
                android:textCursorDrawable="@null"
                android:background="@drawable/edit_text_bg"
                android:layout_gravity="center"
                android:inputType="number"
                android:textColor="@color/activity_trustee_edittext_color"
                android:hint="@string/comrade6"
                android:ems="@integer/ems"
                android:paddingTop="@dimen/padding_top"/>

            <ImageButton
                android:layout_alignTop="@id/comrade6EditText"
                android:layout_alignRight="@id/comrade6EditText"
                android:layout_alignBottom="@+id/comrade6EditText"
                android:layout_marginRight="@dimen/contact_pick_button_margin"
                android:paddingTop="@dimen/contact_pick_padding_top_bottom"
                android:paddingBottom="@dimen/contact_pick_padding_top_bottom"
                android:layout_width="@dimen/contact_pick_button_width"
                android:layout_height="wrap_content"
                android:scaleType="fitCenter"
                android:src="@drawable/contact_icon"
                android:id="@+id/comrade6Button"
                android:background="@null"
                android:layout_gravity="right"
                android:onClick="addContact"
                android:tag="6"/>

            <Button
                android:id="@+id/okButton"
                android:layout_width="@dimen/layout_width"
                android:layout_height="@dimen/trustee_button_height"

                style="@style/NavigateButton"
                android:layout_gravity="center"
                android:background="@drawable/mybutton"
                android:layout_centerHorizontal="true"
                android:text="@string/add_comrades_save"
                android:layout_below="@id/comrade6EditText"
                android:layout_marginTop="@dimen/trustee_margin_top"
                android:layout_marginBottom="@dimen/trustee_margin_bottom"/>


        </RelativeLayout>
    </RelativeLayout>
</ScrollView>
